<resources>
    <!-- Setting -->
    <string name="app_name">YourClip</string>
    <string name="fab_title">Add Contents</string>
    <string name="add_category">Add Category</string>
    <string name="delete_category">Delete Current Category</string>
    <string name="menu_setting">Setting</string>
	<string name="menu_delete_all">Delete All</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>



    <!-- NavigationDrawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- Preference -->
    <string name="preference_title">Setting</string>
    <string name="checkbox_status_bar_key">checkbox_status_bar_key</string>
    <string name="checkbox_status_bar_title">Statusbar</string>
    <string name="checkbox_status_bar_summary">Display in the status bar</string>
    <string name="checkbox_maxrow_title">Max rows Status</string>
    <string name="checkbox_maxrow_key">checkbox_maxrow_key</string>
    <string name="checkbox_maxrow_summary">Display Max 50. Default 20.</string>

    <!-- contextMenu -->
    <string name="context_menu_share">Share</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>

    <!-- exc -->
    <string name="buttom_positive">Ok</string>
    <string name="buttom_negative">Cancel</string>
    <string name="edit_contents_hint">Edit Contents Area</string>

</resources>
