<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pgyt.myapp_2.MainActivity">
    <item
        android:id="@+id/add_category"
        android:title="@string/add_category"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_category"
        android:title="@string/delete_category"
        android:orderInCategory="100"
        app:showAsAction="never" />
	
	<item
        android:id="@+id/all_delete"
        android:title="@string/menu_delete_all"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/file_export"
        android:title="@string/menu_export"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/file_import"
        android:title="@string/menu_import"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_setting"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
